Fixing p tag overflow

--- a/frontend/src/assets/sass/layout.scss
+++ b/frontend/src/assets/sass/layout.scss
@@ -513,3 +513,8 @@ button.modal-buttons {
   margin-left: 24px;
   margin-right: 24px;
 }
+
+p {
+  word-break: break-all;
+  white-space: normal;
+}
